ColorApprovals: session auth refactor, instrumentation, 9 E2E tests passing; update bundle ref and Playwright version

--- a/core/templates/core/color_approvals_react.html
+++ b/core/templates/core/color_approvals_react.html
@@ -17,6 +17,6 @@
 {% endblock %}
 
 {% block extra_js %}
-<!-- Color Approvals React Component -->
-<script type="module" src="{% static 'gantt/colorApprovals.BCaM_qWy.js' %}"></script>
+<!-- Color Approvals React Component (updated bundle) -->
+<script type="module" src="{% static 'gantt/colorApprovals.Dd7CRz8U.js' %}"></script>
 {% endblock %}
